[package]
name = "rust-github-action-test-b76u22ivt4z3"
version = "18446744073709551610.18446744073709551610.18446744073709551611"
edition = "2021"
description = "A simple Rust project to test GitHub Actions!"
readme = "README.md"
repository = "https://github.com/Nakanishi123/rust-github-action-test-b76u22ivt4z3"
license = "Apache-2.0 OR Artistic-2.0 OR BSL-1.0 OR BSD-2-Clause OR BSD-3-Clause"

[dependencies]
