[package]
name = "rust-github-action-test-b76u22ivt4z3"
version = "18446744073709551610.18446744073709551611.18446744073709551615"
edition = "2021"
description = "四則演算を行うライブラリ"
readme = "README.md"
repository = "https://github.com/Nakanishi123/rust-github-action-test-b76u22ivt4z3"
license = "AGPL-3.0-only"
[dependencies]
